# ScanpEx

./: .flake8  Makefile  README.md  pyproject.toml  readthedocs.yaml
.github/workflows/: test.yml
docs/: conf.py  index.rst  modules.rst  requirements.txt  scanpex.ft.rst  scanpex.ml.lightgbm_args.rst  scanpex.ml.rst  scanpex.pl.ml_evaluation.rst  scanpex.pl.preferences.rst  scanpex.pl.rst  scanpex.pp.rst  scanpex.rst  scanpex.sns.rst  scanpex.sq.rst  scanpex.tl.rst
src/scanpex/: __init__.py
src/scanpex/ft/: __init__.py  _gene_list.py
src/scanpex/ml/: __init__.py
src/scanpex/ml/lightgbm_args/: __init__.py
src/scanpex/pl/: __init__.py  _curate_phase.py  _currate_phase.py  _gene_list.py  _scrublet.py  _subplots.py  _umap.py
src/scanpex/pl/ml_evaluation/: __init__.py  _pr.py  _roc.py
src/scanpex/pl/preferences/: __init__.py
src/scanpex/pp/: __init__.py  _metrics.py  _scrublet.py
src/scanpex/sns/: __init__.py  _catlollipop.py  _lollipop.py  _vinswarm.py
src/scanpex/sq/: __init__.py  _gene_cache_mgr.py  _gene_query.py  _xor.py
src/scanpex/tl/: __init__.py  _gene_score.py  _seacells.py
tests/: test_smoke.py
