[tool.poetry]
name = "scanpex"
version = "0.1.0"
description = "ScanPy Extension and kwarg Preferences"
authors = ["yo-aka-gene <yujiokano@keio.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numba = "0.60.0"
matplotlib = "^3.10.8"
pandas = "^2.3.3"
scanpy = "^1.11.5"
anndata = "<0.12"
scipy = "<1.16"
mygene = "^3.2.2"
scikit-learn = "<1.8"
seaborn = "^0.13.2"
jax = "<0.5.0"
jaxlib = "<0.5.0"
seacells = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
