[tool.poetry]
name = "scanpex"
version = "0.1.0"
description = "ScanPy Extension and kwarg Preferences"
authors = ["yo-aka-gene <yujiokano@keio.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numba = "0.60.0"
matplotlib = "^3.10.8"
pandas = "^2.3.3"
scanpy = "^1.11.5"
anndata = "<0.12"
scipy = "<1.16"
mygene = "^3.2.2"
scikit-learn = "<1.8"
seaborn = "^0.13.2"
jax = "<0.5.0"
jaxlib = "<0.5.0"
seacells = "^0.3.3"
fastcluster = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^25.12.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
