[tool.poetry]
name = "scanpex"
version = "0.1.1"
description = "ScanPy Extension and kwarg Preferences"
authors = ["yo-aka-gene <yujiokano@keio.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numba = "0.60.0"
matplotlib = "^3.10.8"
pandas = "^2.3.3"
scanpy = "^1.11.5"
anndata = "<0.12"
scipy = "<1.16"
mygene = "^3.2.2"
scikit-learn = "<1.8"
seaborn = "^0.13.2"
jax = "<0.5.0"
jaxlib = "<0.5.0"
seacells = "^0.3.3"
fastcluster = "^1.3.0"
numpy = "<2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^25.12.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"
pre-commit = "^4.5.1"
sphinx = "<9.0.0"
numpydoc = "^1.10.0"
sphinx-gallery = "^0.20.0"
sphinx-rtd-theme = "^3.1.0"
pandoc = "^2.4"
watchdog = "^6.0.0"
myst-parser = "<5.0.0"
twine = "^6.2.0"
tomli = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
